# banking-rtm-pipeline

./: README.md  activate.ps1  docker-compose.yml  pyproject.toml
data/checkpoints/fraud_detection/bronze/: .metadata.crc  metadata
data/checkpoints/fraud_detection/console/: .metadata.crc  metadata
data/checkpoints/fraud_detection/fraud_alerts/: .metadata.crc  metadata
data/delta/bronze/transactions/: .part-00000-00b1d24c-4d65-4c56-99be-cb9486b5eb24-c000.snappy.parquet.crc  .part-00000-297eedc9-524d-4124-ae2b-daf234f52fe3-c000.snappy.parquet.crc  .part-00000-4bf9fe8d-244d-42a8-ba40-d0b8dfba8360-c000.snappy.parquet.crc  .part-00000-76922611-5c20-4411-bf3a-a3d3f46cf70f-c000.snappy.parquet.crc  .part-00000-82216f70-2490-4728-89c5-af6e458d0819-c000.snappy.parquet.crc  .part-00000-9d759824-bffa-46d8-bad7-21905881d922-c000.snappy.parquet.crc  .part-00000-a8758123-31b1-4a35-ba53-c6c48b1eca6e-c000.snappy.parquet.crc  .part-00000-acf4b9e3-d58e-4fb3-828d-e46484012178-c000.snappy.parquet.crc  .part-00000-b85745aa-3d78-456a-a5c8-8f0e35e9a5fc-c000.snappy.parquet.crc  .part-00000-d8da8b34-4f87-426a-94be-941d2a3b99e4-c000.snappy.parquet.crc  part-00000-00b1d24c-4d65-4c56-99be-cb9486b5eb24-c000.snappy.parquet  part-00000-297eedc9-524d-4124-ae2b-daf234f52fe3-c000.snappy.parquet  part-00000-4bf9fe8d-244d-42a8-ba40-d0b8dfba8360-c000.snappy.parquet  (+7 more)
ingestion/producers/: transaction_producer.py
ingestion/producers/schema/: transaction.json
streaming/jobs/: fraud_detection_stream.py
streaming/rules/: amount_deviation.py  geo_anomaly.py  velocity_check.py
(+114 files in other folders)
